--- a/teach-me/src/components/Sidebar.css
+++ b/teach-me/src/components/Sidebar.css
@@ -3,3 +3,18 @@
     height: 100vh;
     border-right: 2px solid #e1e4e8;
 }
+
+a{
+    padding: 6px;
+}
+a:link{
+    text-decoration: none;
+
+}
+a:link:hover{
+    font-size: 18px;
+    -moz-transition-duration:0.5s;
+    -webkit-transition-duration: 0.5s;
+    -moz-transform: translate(50px,0);
+    -webkit-transform: translate(50px,0);
+}
